# Chess

./: CMakeLists.txt  README.md
chess/: CMakeLists.txt
chess/source/: board.cpp  board.hpp  chess.cpp  game.cpp  game.hpp  main.cpp  move.cpp  move.hpp  piece.cpp  piece.hpp  pin.cpp  pin.hpp  position.cpp  position.hpp  state.cpp  state.hpp
engine/: CMakeLists.txt
engine/assets/shaders/: UnlitSprite2D.frag  UnlitSprite2D.vert
engine/source/: Wigner.hpp
engine/source/Wigner/Base/: Asserts.hpp  Base.hpp  Defines.hpp  Logging.cpp  Logging.hpp  Types.hpp
engine/source/Wigner/Core/: Application.cpp  Application.hpp  Entrypoint.h  Entrypoint.hpp  Layer.hpp  Window.cpp  Window.hpp
engine/source/Wigner/Events/: Events.cpp  Events.hpp
engine/source/Wigner/Graphics/: Cameras.cpp  Cameras.hpp  RenderTypes.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture2D.cpp  Texture2D.hpp
